--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <p class="title section-item"><span>About</span>Me</p>
             <div class="asset-body">
                 <div class="section-item">
-                    <p>I live in Germany since Oct. 2015. In Yemen I started working in the field of cultural heritage since June 1996. I worked for the Yemeni government and also for different international projects in Yemen (American, Dutch, German, French, and Italian).
+                    <p>I live in Germany since Oct. 2015. In Yemen I worked in the field of cultural heritage from June 1996 till June 2015. <br> I worked for the Yemeni government and also for some local and international organizations and projects (American, Dutch, German, French, and Italian).
                         <br>
-                    In Germany in Flensburg city, I worked as a coordinator projects for different cultural projects and kids activities too, with official offices and with different organizations there.
+                    In Germany, in Flensburg city, I worked as a coordinator projects for different cultural projects and kids activities too. I worked there in governmental and non-governmental organizations.
                     </p>
                 </div>
                 <div class="section-item">
