--- a/index.html
+++ b/index.html
@@ -89,44 +89,44 @@
                 <div class="section-item">
                     <div class="section-sub-item">
                         <p class="time">March 2016 - Oct. 2020</p>
-                        <p class="item-name">Coordinator Projects.</p>
-                        <p class="place-name">Flüchtlingshilfe Flensbuerg e.V - Flensburg-Germany.</p>
+                        <p class="item-name">Coordinator Projects (Cultural & Children).</p>
+                        <p class="place-name">Fluechtlingshilfe Flensburg e.V- Flensburg-Germany (Refugee Aid office).</p>
                     </div>
                     <div class="section-sub-item">
-                        <p class="time">Apri 2017 - April 2018</p>
-                        <p class="item-name">Coordinator (Federal Voluntary Service) with Rathaus Flensburg.</p>
-                        <p class="place-name">In two schools and in refugee help office-Flensburg-Germany.</p>
-                    </div>
-                    <div class="section-sub-item">
-                        <p class="time">Dec. 2015 - Sep. 2019</p>
+                        <p class="time">Dec. 2015 - Oct. 2019</p>
                         <p class="item-name">Coordinator of Sport activities.</p>
                         <p class="place-name">Sportpiraten Flensburg e.V - Flensburg-Germany.</p>
                     </div>
                     <div class="section-sub-item">
-                        <p class="time">Oct. 2008 - June. 2015</p>
-                        <p class="item-name">Coordinator of the Institute in Yemen and Photography Documentation of the Restoration Projects.</p>
-                        <p class="place-name">Istituto Veneto per i Beni Culturali - Venezia-Italia in Sana'a & Taiz-Yemen.</p>
+                        <p class="time">April 2017 - April 2018</p>
+                        <p class="item-name">Coordinator (Federal Voluntary Service) with Rathaus Flensburg.</p>
+                        <p class="place-name">In two schools and in refugee Aid office - Flensburg-Germany.</p>
                     </div>
                     <div class="section-sub-item">
-                        <p class="time">March 2003 - Oct. 2008</p>
-                        <p class="item-name">Projects Officer and Photography Documentation of the Restoration Projects.</p>
-                        <p class="place-name">Social Fund for Development - Sana'a-Yemen.</p>
+                        <p class="time">Oct. 2008 - June. 2015</p>
+                        <p class="item-name">Representative of the Institute in Yemen. <br> Photography Documentation for the Restoration Projects in Sana'a & Taiz-Yemen.</p>
+                        <p class="place-name">Istituto Veneto per i Beni Culturali - Venezia-Italia</p>
+                    </div>
+                    <div class="section-sub-item">
+                        <p class="time">March 2003 - June 2015</p>
+                        <p class="item-name">Projects Officer. <br> Coordinator of the Photogrammetry Project. <br> Photography Documentation.</p>
+                        <p class="place-name">Social Fund for Development-Cultural Heritage Unite - Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">Aug. 1998 - March. 2003</p>
                         <p class="item-name">Library Manager.</p>
                         <p class="item-name">Academic Cooperation Department Manager.</p>
-                        <p class="place-name">Center Architect Training Studies (CATS) under the General Organization for the Preservation of Historic Cities (Ministry of Cultural and Truism) - Old City of Sana'a-Yemen.</p>
+                        <p class="place-name">Ministry of Cultural and Tourism-General Organization for the Preservation of Historic Cities-Center Architect Training Studies (CATS) - Old City of Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
-                        <p class="time">Sep. 1999 - March 2003</p>
+                        <p class="time">Sep. 1998 - March 2003</p>
                         <p class="item-name">Coordinator.</p>
-                        <p class="place-name">German Development Service (ded) in the office of ded at Center Architect Training Studies (CATS) - Sana'a-Yemen.</p>
+                        <p class="place-name">German Development Service (ded) in the office of ded at Center Architect Training Studies (CATS) - Old City of Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">June. 1996 - Aug. 1998</p>
                         <p class="item-name">Administrative Work.</p>
-                        <p class="place-name">General Organization for the Preservation of Historic Cities (Ministry of Cultural and Truism) - Old City of Sana'a-Yemen.</p>
+                        <p class="place-name">Ministry of Cultural and Tourism-General Organization for the Preservation of Historic Cities - Old City of Sana'a-Yemen.</p>
                     </div>
                 </div> 
             </div>
@@ -177,13 +177,13 @@
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/KidsProject-Flensburg-Germany.jpg" alt="Fawzi Al-Dubhani-Kids Project-Flensburg-Germany">
                         </div>
-                        <p class="project-name">Kids Project<br>Flensburg-Germany</p>    
+                        <p class="project-name">Children Project<br>Flensburg-Germany</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/KidsProject-Flensburg-Germany-2.jpg" alt="Fawzi Al-Dubhani-Kids Project-Flensburg-Germany">
                         </div>
-                        <p class="project-name">Kids Project<br>Flensburg-Germany</p>    
+                        <p class="project-name">Children Project<br>Flensburg-Germany</p>    
                     </div>  
                     <div class="gallery-item">
                         <div class="img-content">
