--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="img-profile"></div>
         <div class="profile-body">
             <p class="name">Fawzi Al-Dubhani</p>
-            <p class="job">Projects Manager</p>
+            <p class="job">Project Manager</p>
             <div class="socials">
                 <a href="#"><i class="fab fa-linkedin"> </i></a>
                 <a href="#"><i class="fab fa-twitter"> </i></a>
@@ -41,9 +41,11 @@
             <p class="title section-item"><span>About</span>Me</p>
             <div class="asset-body">
                 <div class="section-item">
-                    <p>I live in Germany since Oct. 2015. In Yemen I worked in the field of cultural heritage from June 1996 till June 2015. <br> I worked for the Yemeni government and also for some local and international organizations and projects (American, Dutch, German, French, and Italian).
-                        <br>
-                    In Germany, in Flensburg city, I worked as a coordinator projects for different cultural projects and kids activities too. I worked there in governmental and non-governmental organizations.
+                    <p>I come from the wonderful country of Yemen and I lived in Germany since Oct. 2015. In my home country I worked in the field of cultural heritage study and conservation from June 1996 till June 2015.
+                    <br> 
+                    I worked for the Yemeni government as well as for number of local and international organizations and projects (American, Dutch, German, French, and Italian).
+                    <br>
+                    In Germany, my experience is as a project coordinator, working closely with both government and non-government organizations to lead different cultural projects and activities for children and refugees.
                     </p>
                 </div>
                 <div class="section-item">
@@ -303,7 +305,7 @@
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/MyOffice-ReffugeeAssistanceOffice-Flensburg-Germany.JPG" alt="Fawzi Al-Dubhani-My Office - Refugee Assistance Office-Flensburg-Germany">
                         </div>
-                        <p class="project-name">My Office - Refugee Assistance Office<br>Flensburg-Germany</p>    
+                        <p class="project-name">In my Office - Refugee Aid Office<br>Flensburg-Germany</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
