--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <br> 
                     I worked for the Yemeni government as well as for number of local and international organizations and projects (American, Dutch, German, French, and Italian).
                     <br>
-                    In Germany, my experience is as a project coordinator, working closely with both government and non-government organizations to lead different cultural projects and activities for children and refugees.
+                    In Germany, my experience is as a project manager and coordinator, working closely with both government and non-government organizations to lead different cultural projects and activities for children and adult mostly are refugees.
                     </p>
                 </div>
                 <div class="section-item">
@@ -305,7 +305,7 @@
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/MyOffice-ReffugeeAssistanceOffice-Flensburg-Germany.JPG" alt="Fawzi Al-Dubhani-My Office - Refugee Assistance Office-Flensburg-Germany">
                         </div>
-                        <p class="project-name">In my Office - Refugee Aid Office<br>Flensburg-Germany</p>    
+                        <p class="project-name">At Work - Refugee Aid Office<br>Flensburg-Germany</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
