--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <div class="asset-body">
                 <div class="section-item">
                     <div class="section-sub-item">
-                        <p class="time">March 2016 - Oct. 2020</p>
-                        <p class="item-name">Coordinator Projects (Cultural & Children).</p>
-                        <p class="place-name">Fluechtlingshilfe Flensburg e.V- Flensburg-Germany (Refugee Aid office).</p>
+                        <p class="time">March 2016 - Dec. 2021</p>
+                        <p class="item-name">Manager & Coordinator Projects (Cultural & Children activities).</p>
+                        <p class="place-name">Fluechtlingshilfe Flensburg e.V- Flensburg-Germany (Refugee Aid).</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">Dec. 2015 - Oct. 2019</p>
@@ -106,29 +106,29 @@
                     </div>
                     <div class="section-sub-item">
                         <p class="time">Oct. 2008 - June. 2015</p>
-                        <p class="item-name">Representative of the Institute in Yemen. <br> Photography Documentation for the Restoration Projects in Sana'a & Taiz-Yemen.</p>
-                        <p class="place-name">Istituto Veneto per i Beni Culturali - Venezia-Italia</p>
+                        <p class="item-name">Representative & Coordinator of the Institute in Yemen. <br> Photography Documentation for the Restoration Projects in Sana'a & Taiz-Yemen.</p>
+                        <p class="place-name">Istituto Veneto per i Beni Culturali - Venezia-Italia (Veneto Institute for Cultural Heritage)</p> 
                     </div>
                     <div class="section-sub-item">
                         <p class="time">March 2003 - June 2015</p>
-                        <p class="item-name">Projects Officer. <br> Coordinator of the Photogrammetry Project. <br> Photography Documentation.</p>
-                        <p class="place-name">Social Fund for Development-Cultural Heritage Unite - Sana'a-Yemen.</p>
+                        <p class="item-name">Project Officer. <br> Coordinator & member of the Photogrammetry Project. <br> Photography Documentation.</p>
+                        <p class="place-name">Social Fund for Development-Cultural Heritage Unite- Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">Aug. 1998 - March. 2003</p>
                         <p class="item-name">Library Manager.</p>
                         <p class="item-name">Academic Cooperation Department Manager.</p>
-                        <p class="place-name">Ministry of Cultural and Tourism-General Organization for the Preservation of Historic Cities-Center Architect Training Studies (CATS) - Old City of Sana'a-Yemen.</p>
+                        <p class="place-name">Center Architect Training Studies (CATS)- General Organization for the Preservation of Historic Cities- Ministry of Cultural and Tourism- Old City of Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">Sep. 1998 - March 2003</p>
                         <p class="item-name">Coordinator.</p>
-                        <p class="place-name">German Development Service (ded) in the office of ded at Center Architect Training Studies (CATS) - Old City of Sana'a-Yemen.</p>
+                        <p class="place-name">German Development Service (ded) in the office of ded at the Center Architect Training Studies (CATS) - Old City of Sana'a-Yemen.</p>
                     </div>
                     <div class="section-sub-item">
                         <p class="time">June. 1996 - Aug. 1998</p>
                         <p class="item-name">Administrative Work.</p>
-                        <p class="place-name">Ministry of Cultural and Tourism-General Organization for the Preservation of Historic Cities - Old City of Sana'a-Yemen.</p>
+                        <p class="place-name">General Organization for the Preservation of Historic Cities- Ministry of Cultural and Tourism- Old City of Sana'a-Yemen.</p>
                     </div>
                 </div> 
             </div>
