--- a/index.html
+++ b/index.html
@@ -257,19 +257,19 @@
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/ProjectManger-RestorationProject-ItalianRestorationSchool-Sanaa-1.JPG" alt="Fawzi Al-Dubhani-Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen"> 
                         </div>
-                        <p class="project-name">Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
+                        <p class="project-name">Project Manager-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/ProjectManger-RestorationProject-ItalianRestorationSchool-Sanaa-2.JPG" alt="Fawzi Al-Dubhani-Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen">
                         </div>
-                        <p class="project-name">Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
+                        <p class="project-name">Project Manager-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
                             <img class="image-resize" src="./images/Gallery/ProjectManger-RestorationProject-ItalianRestorationSchool-Sanaa-4.JPG" alt="Fawzi Al-Dubhani-Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen">
                         </div>
-                        <p class="project-name">Project Manger-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
+                        <p class="project-name">Project Manager-Restoration Project-Italian Restoration School-Sana'a-Yemen</p>    
                     </div>
                     <div class="gallery-item">
                         <div class="img-content">
